--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quizlet-dupe",
+  "name": "anki-dupe-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@tailwindcss/postcss": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
